force-app/main/default/objects/XMLInput__c/XMLInput__c.object-meta.xml
<CustomObject>
    <label>XMLInput</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>XMLInput Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XMLInputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>