force-app/main/default/objects/XMLInput__c/fields/ApprovalType__c.field-meta.xml
<CustomField>
    <fullName>ApprovalType__c</fullName>
    <label>ApprovalType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>