force-app/main/default/objects/XMLInput__c/fields/ExpediteIncluded__c.field-meta.xml
<CustomField>
    <fullName>ExpediteIncluded__c</fullName>
    <label>ExpediteIncluded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>