force-app/main/default/objects/XMLInput__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <label>OpportunityId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>