force-app/main/default/objects/XMLInput__c/fields/QuoteType__c.field-meta.xml
<CustomField>
    <fullName>QuoteType__c</fullName>
    <label>QuoteType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>