force-app/main/default/objects/XMLInput__c/fields/SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmittedBy__c</fullName>
    <label>SubmittedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>